# joxtabot

./: .gitignore  README.md  compose.yaml  package.json
chat-display/: Dockerfile  bun.lockb  package.json  tsconfig.json
chat-display/public/: style.css
chat-display/src/: index.tsx  types.tsx
chat-display/src/components/: chat-message.tsx  main.tsx
chatter/: Cargo.toml  Dockerfile
chatter/.sqlx/: query-0549252351912881be3d7ce211831168aafc40cd7e2e250c314e1ceb956007b8.json  query-2598b479771914e3fda956699ac2002df89ed8fa9277786a990ae7a10e0aa657.json  query-2eadaa9c3ff62b0f88340c28d47d9a92ef66a384a1b02dabcb87d45f6726e3f8.json  query-8dd8edd847746360ef63ce2635797b5a45554b2e3c24ac39780dd85d22d986e6.json  query-f1aa36a999b6d1d5be71d80ed4e47670df349bb2cf86383505dd5a1168e3d6e9.json
chatter/migrations/: 20240306211834_tokens.up.sql  20240308114751_nullable_expires_at.down.sql  20240308114751_nullable_expires_at.up.sql
chatter/src/: main.rs
client/: package-lock.json  package.json
client/src/routes/: __error.svelte  about.svelte  index.svelte  settings.svelte
deno-twitch/: .env.example  deno.tsconfig.json  deps.ts  discord.ts  fauna-twitch-quotes.gql  herp.json  main.ts  scripts.config.ts  server.ts  subscriptions.txt  twitch-types.ts  url-handlers.ts  utils.ts  velociraptor.ts
discord/: .eslintrc.js  gatewayOpcodeHandlers.ts  hooks.ts  index.js  index.ts  messageHandlers.js  messageHandlers.ts  package-lock.json  package.json
rust-server/: Cargo.toml  README.md
rust-server/.config/: nextest.toml
rust-server/discord-utils/: Cargo.toml
rust-server/discord-utils/src/: lib.rs  main.rs
rust-server/server/: Cargo.toml
rust-server/server/src/: main.rs  utils.rs
rust-server/server/src/api/webhooks/: twitch.rs
rust-server/server/src/string_utils/: mod.rs
rust-server/server/src/twitch/: mod.rs
rust-server/server/src/websocket/: client_utils.rs  server_utils.rs  utils.rs
rust-server/src/: lib.rs
rust-server/twitch-utils/: Cargo.toml
rust-server/twitch-utils/src/: lib.rs  main.rs
rust-server/twitch_irc_parser/: Cargo.toml
rust-server/twitch_irc_parser/src/: lib.rs  tests.rs  types.rs  utils.rs
rust-server/twitch_irc_parser/tests/: clearchat.rs  clearmsg.rs  globaluserstate.rs  hosttarget.rs  integration_test.rs  notice.rs  privmsg.rs  reconnect.rs  roomstate.rs  usernotice.rs
rust-server/websocket-client/: Cargo.toml
rust-server/websocket-client/src/: main.rs
server/: .env.example  .gitignore  Cargo.toml  README.md  deno.tsconfig.json  file-utils.ts  main.ts  middlewares.ts  notes.txt  obs-utils.ts  parser-utils.ts  schema.gql  velociraptor.ts  ws-test.ts
server/cov_profile/: 0b361df2-5596-4f76-a785-4aebee036621.json  0fa4fba7-1744-428c-84ce-417775fa391e.json  19204d9a-fd98-4726-91ec-a36ff2d42217.json  1983e176-4daa-48f7-8864-bab9c20b9380.json  2b9f9672-a06d-4082-9d2d-f04bde65e984.json  49b5e88b-8dae-419f-aff7-edf2351a0ac7.json  69f70906-f1ca-42c1-af60-5fd8ede3fc90.json  6a4276d7-b3f6-4831-b487-29f1104c5d61.json  761ae27a-88a2-4ef6-9841-5a8b8d51d2c1.json  84b0cace-233c-4fe5-90db-dea577b771b4.json  8b455742-d020-4c0a-a3df-41b0be6dbc6c.json  b4c6e201-55c9-47ab-9af8-8703797dc65e.json  e2f05e4b-2fe3-4c28-a81f-409663784ba4.json  e98eed5c-acfe-41ef-8f15-28ab4e1824de.json  edbf5ceb-67f7-4bf7-829c-6bdc7b204c01.json  f2ca6c87-727c-4bda-a8eb-5fc4aeae370f.json  f4bb3204-3bb6-49ed-8922-de95451283c8.json  feb65c55-f9ff-462f-8197-8973766956a9.json
server/discord/: Cargo.toml  api-utils.ts  utils.ts
server/discord/src/: lib.rs  main.rs
server/socket-server/: mod.ts
server/tests/: parser-utils.test.ts
server/twitch/: Cargo.toml  api-utils.ts  bot-func.ts  bot.ts  irc-message-parser.ts  timeout-utils.ts  types.ts  utils.ts
server/twitch/src/: lib.rs  main.rs
server/twitch/tests/: irc-message-parser.test.ts
server/utils/: logger.ts  socket-handler.ts
sveltekit-client/: package-lock.json  package.json  pnpm-lock.yaml
sveltekit-client/src/routes/: +error.svelte  +layout.svelte
sveltekit-client/src/routes/(app)/: +layout.svelte
sveltekit-client/src/routes/cubed/: index@foo.svelte
sveltekit-client/src/routes/overlay/: +page@.svelte  +page@foo.svelte  index@foo.svelte
sveltekit-client/src/stores/: ws.ts
sveltekit-client/src/utils/: uid.ts
twitch/: nodemon.json  package-lock.json  package.json
twitch/src/: index.ts
