[package]
name = "chatter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
amqprs = "1.5.3"
async-trait = "0.1.77"
chrono = { version = "0.4.34", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { version = "1.36.0", features = ["full"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
twitch-irc = { version = "5.0.1", features = ["refreshing-token-rustls-native-roots"] }
