[workspace]
members = [
    "discord-utils",
    "twitch-utils",
    "server",
    "twitch_irc_parser",
]

[workspace.package]
version = "0.1.0"
authors = ["Joxtacy"]
edition = "2021"

[workspace.dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }
pretty_assertions = "1.3.0"
