[workspace]

members = [
  "discord",
  "twitch",
]

[workspace.package]
authors = ["Joxtacy"]
edition = "2021"
version = "0.1.0"

[workspace.dependencies]
dotenv = "0.15.0"
log = "0.4.19"
mockito = "1.1.0"
pretty_assertions = "1.3.0"
reqwest = { version = "0.11.18", features = ["json"] }
serde = { version = "1.0.164", features = ["derive"] }
tokio = { version = "1.28.2", features = ["full"] }

# Enable a small amout of optimisation in debug mode
[profile.dev]
opt-level = 1
