[package]
name = "discord-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.144", features = ["derive"] }
tokio = { version = "1.20.1", features = ["full"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
