[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.82"
hmac = "0.12.1"
sha2 = "0.10.2"
twitch_irc_parser = { path = "../twitch_irc_parser" }
twitch-utils = { path = "../twitch-utils" }
discord-utils = { path = "../discord-utils" }
hex = "0.4.3"
tokio-tungstenite = "0.17.2"
futures-util = { version = "0.3.21", features = ["sink"] }
awc = "3.0.0"
tokio = { version = "1.20.1", features = ["macros", "full"] }
warp = "0.3.2"
dotenv = "0.15.0"
serde_derive = "1.0.143"
bytes = "1.2.1"
chrono = "0.4.22"

[features]
