[package]
name = "server"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.9.0"
log = "0.4.17"
serde.workspace = true
serde_json = "1.0.82"
hmac = "0.12.1"
sha2 = "0.10.2"
twitch_irc_parser = { path = "../twitch_irc_parser" }
twitch-utils = { path = "../twitch-utils" }
discord-utils = { path = "../discord-utils" }
hex = "0.4.3"
tokio-tungstenite = "0.17.2"
futures-util = { version = "0.3.21", features = ["sink"] }
awc = "3.0.0"
tokio = { workspace = true, features = ["macros"] }
warp = "0.3.2"
dotenv.workspace = true
serde_derive = "1.0.143"
bytes = "1.2.1"
chrono = "0.4.22"

[dev-dependencies]
pretty_assertions.workspace = true

[features]
