[package]
name = "twitch-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv.workspace = true
log.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
