[package]
name = "twitch-utils"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv.workspace = true
log.workspace = true
mockito = "1.1.0"
reqwest.workspace = true
serde.workspace = true
serde_json = "1.0.96"
tokio.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
