[package]
name = "websocket-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.1.0"
awc = { version = "3.0.0", features = [ "rustls" ]}
dotenv = "0.15.0"
futures-util = { version = "0.3.21", features = ["sink"] }
openssl = "0.10.41"
tokio = { version = "1.20.1", features = ["macros"] }
twitch_irc_parser = { path = "../twitch_irc_parser" }
