[package]
name = "twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv.workspace = true
env_logger = "0.10.0"
log.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true

[dev-dependencies]
mockito.workspace = true
pretty_assertions.workspace = true
